--- a/index.html
+++ b/index.html
@@ -316,47 +316,46 @@
         <!-- Call To Action End -->
 
 
-        <!-- pricing Start -->
-       <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
-                        <div class="rounded bg-light pricing-item">
-                            <div class="bg-primary py-3 px-5 text-center rounded-top border-bottom border-dark">
-                                <h2 class="m-0">projects</h2>
-                            </div>
-                            <div class="px-4 py-5 text-center bg-primary pricing-label mb-2">
-                                <h1 class="mb-0">100+<span class="text-secondary fs-5 fw-normal">Successful</span></h1>
-                                <p class="mb-0">projects</p>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".5s">
-                        <div class="rounded bg-light pricing-item">
-                            <div class="bg-dark py-3 px-5 text-center rounded-top border-bottom border-primary">
-                                <h2 class="m-0 text-primary">Experience</h2>
-                            </div>
-                            <div class="px-4 py-5 text-center bg-dark pricing-label pricing-featured mb-2">
-                                <h1 class="mb-0 text-primary">6+<span class="fs-5 fw-normal">years</span></h1>
-                                <p class="mb-0 text-white">Experiance</p>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
-                        <div class="rounded bg-light pricing-item">
-                            <div class="bg-primary py-3 px-5 text-center rounded-top border-bottom border-dark">
-                                <h2 class="m-0">Clients</h2>
-                            </div>
-                            <div class="px-4 py-5 text-center bg-primary pricing-label mb-2">
-                                <h1 class="mb-0">200+<span class="text-secondary fs-5 fw-normal">Satisfied</span></h1>
-                                <p class="mb-0">Clients</p>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
+        <!-- Pricing Start -->
+<div class="container text-center">
+    <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
+            <div class="rounded bg-light pricing-item">
+                <div class="bg-primary py-3 px-5 text-center rounded-top border-bottom border-dark">
+                    <h2 class="m-0">Projects</h2>
+                </div>
+                <div class="px-4 py-5 text-center bg-primary pricing-label mb-2">
+                    <h1 class="mb-0">100+<span class="text-secondary fs-5 fw-normal"> Successful</span></h1>
+                    <p class="mb-0">Projects</p>
                 </div>
             </div>
         </div>
-        <!-- Pricing End -->
+        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".5s">
+            <div class="rounded bg-light pricing-item">
+                <div class="bg-dark py-3 px-5 text-center rounded-top border-bottom border-primary">
+                    <h2 class="m-0 text-primary">Experience</h2>
+                </div>
+                <div class="px-4 py-5 text-center bg-dark pricing-label pricing-featured mb-2">
+                    <h1 class="mb-0 text-primary">6+<span class="fs-5 fw-normal"> years</span></h1>
+                    <p class="mb-0 text-white">Experience</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
+            <div class="rounded bg-light pricing-item">
+                <div class="bg-primary py-3 px-5 text-center rounded-top border-bottom border-dark">
+                    <h2 class="m-0">Clients</h2>
+                </div>
+                <div class="px-4 py-5 text-center bg-primary pricing-label mb-2">
+                    <h1 class="mb-0">200+<span class="text-secondary fs-5 fw-normal"> Satisfied</span></h1>
+                    <p class="mb-0">Clients</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Pricing End -->
+
 
                     <!-- Testimonial Start -->
 <div class="container-fluid testimonial py-5">
