--- a/index.html
+++ b/index.html
@@ -229,22 +229,28 @@
             </div>
 
             <!-- Project Item 8 -->
-            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
-                <div class="project-item">
-                    <div class="project-left bg-dark"></div>
-                    <div class="project-right bg-dark"></div>
-                    <img src="BriskSrcFolder/BriskImages/BriskHoney-Bee.gif" class="img-fluid h-100" alt="img" width="30" height="40">
-                    <div class="project-details">
-                        <a href="" class="fs-4 fw-bold text-center">Honey Bee Removal</a>
-                        <p class="fs-6 text-center">Gentle, eco Bee Removal for a sting-free zone!.</p>
-                    </div>
+             <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
+            <div class="project-item">
+                <div class="project-left bg-dark"></div>
+                <div class="project-right bg-dark"></div>
+                <img src="img/project-4.jpg" class="img-fluid h-100" alt="img">
+                <div class="project-details">
+                    <a href="" class="fs-4 fw-bold text-center">Honey Bee Removal</a>
+                    <p class="fs-6 text-center">Gentle, eco Bee Removal for a sting-free zone!.</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<!-- Project End -->
 
-        <!-- Project End -->
+<!-- Button Template -->
+<a href="services.html" class="btn btn-border btn-with-icon btn-small ripple">
+    <span>More Service</span>
+    <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9">
+        <use xlink:href="assets/img/sprite.svg#arrow-right"></use>
+    </svg>
+</a>
 
              <!-- Blog Start -->
         <div class="container-fluid py-5">
