--- a/index.html
+++ b/index.html
@@ -245,12 +245,14 @@
 <!-- Project End -->
 
 <!-- Button Template -->
-<a href="services.html" class="btn btn-border btn-with-icon btn-small ripple">
-    <span>More Service</span>
-    <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9">
-        <use xlink:href="assets/img/sprite.svg#arrow-right"></use>
-    </svg>
-</a>
+<div class="text-center"> <!-- Center align the button -->
+    <a href="services.html" class="btn btn-border btn-with-icon btn-small ripple">
+        <span>More Service</span>
+        <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9">
+            <use xlink:href="BriskSrcFolder/sprite.svg#arrow-right"></use>
+        </svg>
+    </a>
+</div>
 
              <!-- Blog Start -->
         <div class="container-fluid py-5">
