--- a/index.html
+++ b/index.html
@@ -247,14 +247,15 @@
 <!-- Button Template -->
 <div class="text-center"> <!-- Center align the button -->
     <a href="services.html" class="btn btn-border btn-with-icon btn-small ripple"
-        onmousedown="this.style.background = 'linear-gradient(#ffd700, #ffcc00)'"
-        onmouseup="this.style.background = '#ffd700'">
+        onmousedown="this.style.borderRadius = '15px'; this.style.background = 'linear-gradient(#ffd700, #ffcc00)'"
+        onmouseup="this.style.borderRadius = '15px'; this.style.background = '#ffd700'">
         <span>More Service</span>
         <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9">
             <use xlink:href="BriskSrcFolder/sprite.svg#arrow-right"></use>
         </svg>
     </a>
 </div>
+
 
 
              <!-- Blog Start -->
