--- a/index.html
+++ b/index.html
@@ -244,17 +244,14 @@
 </div>
 <!-- Project End -->
 
-<!-- Button Template -->
-<div class="text-center"> <!-- Center align the button -->
-    <a href="services.html" class="btn btn-border btn-with-icon btn-small ripple"
-        onmousedown="this.style.borderColor = 'linear-gradient(#ffd700, #ffcc00)';"
-        onmouseup="this.style.borderColor = '#ffd700';">
-        <span>More Service</span>
-        <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9">
-            <use xlink:href="BriskSrcFolder/sprite.svg#arrow-right"></use>
-        </svg>
-    </a>
+<!-- Your existing HTML with inline styles -->
+<div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
+    <h3 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block"
+        style="border: 2px solid transparent; border-image: linear-gradient(to right, #ffd700, #ffcc00); border-image-slice: 1; padding: 8px;">
+        Other Service
+    </h3>
 </div>
+
 
 
 
