--- a/index.html
+++ b/index.html
@@ -244,13 +244,16 @@
 </div>
 <!-- Project End -->
 
-<!-- Your existing HTML with inline styles -->
+<!-- Sunaif @master -->
 <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
+    <!-- Add an onclick attribute to the existing h3 tag to redirect to "service.html" -->
     <h3 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block"
-        style="border: 2px solid transparent; border-image: linear-gradient(to right, #ffd700, #ffcc00); border-image-slice: 1; padding: 8px;">
+        style="border: 2px solid transparent; border-image: linear-gradient(to right, #ffd700, #ffcc00); border-image-slice: 1; padding: 8px; cursor: pointer;"
+        onclick="window.location.href='service.html';">
         Other Service
     </h3>
 </div>
+
 
 
 
