--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <h3 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block"
         style="border-radius: 20px; background: linear-gradient(to right, #ffd700, #ffcc00); padding: 8px; cursor: pointer; display: inline-block;"
         onclick="window.location.href='service.html';">
-        Other Service
+        More Service ➔
     </h3>
 </div>
 
