--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <div class="project-item">
                 <div class="project-left bg-dark"></div>
                 <div class="project-right bg-dark"></div>
-                <img src="img/project-4.jpg" class="img-fluid h-100" alt="img">
+                <img src="BriskSrcFolder/BriskImages/BriskHoney-Bee.gif" class="img-fluid h-100" alt="img">
                 <div class="project-details">
                     <a href="" class="fs-4 fw-bold text-center">Honey Bee Removal</a>
                     <p class="fs-6 text-center">Gentle, eco Bee Removal for a sting-free zone!.</p>
