--- a/service.html
+++ b/service.html
@@ -125,7 +125,7 @@
         <!-- Page Header End -->
 
 
-        <!-- Project Start -->
+        <        <!-- Project Start -->
        <div class="container-fluid py-5">
     <div class="container py-5">
         <div class="text-center mb-5">
@@ -137,7 +137,7 @@
                 <div class="project-item">
                     <div class="project-left bg-dark"></div>
                     <div class="project-right bg-dark"></div>
-                    <img src="img/project-1.jpg" class="img-fluid h-100" alt="img">
+                    <img src="BriskSrcFolder/BriskImages/BriskRodent.gif" class="img-fluid h-100" alt="img" width="30" height="40">
                     <div class="project-details">
                         <a href="" class="fs-4 fw-bold text-center">Rodent Control</a>
                         <p class="fs-6 text-center">Fast, eco Rodent Control for a pest-free space!</p>
@@ -150,7 +150,7 @@
                 <div class="project-item">
                     <div class="project-left bg-dark"></div>
                     <div class="project-right bg-dark"></div>
-                    <img src="img/project-2.jpg" class="img-fluid h-100" alt="img">
+                    <img src="BriskSrcFolder/BriskImages/BriskMosquito.gif" class="img-fluid h-100" alt="img" width="30" height="40">
                     <div class="project-details">
                         <a href="" class="fs-4 fw-bold text-center">Mosquito Control</a>
                         <p class="fs-6 text-center">Fast, eco Mosquito Control for a bite-free zone!</p>
@@ -163,7 +163,7 @@
                 <div class="project-item">
                     <div class="project-left bg-dark"></div>
                     <div class="project-right bg-dark"></div>
-                    <img src="img/project-3.jpg" class="img-fluid h-100" alt="img">
+                    <img src="BriskSrcFolder/BriskImages/BriskBed-Bug.gif" class="img-fluid h-100" alt="img" width="30" height="40">
                     <div class="project-details">
                         <a href="" class="fs-4 fw-bold text-center">Bed Bug Control</a>
                         <p class="fs-6 text-center">Fast, eco Bed Bug Control for a bite-free sleep!</p>
@@ -175,7 +175,7 @@
                 <div class="project-item">
                     <div class="project-left bg-dark"></div>
                     <div class="project-right bg-dark"></div>
-                    <img src="img/project-4.jpg" class="img-fluid h-100" alt="img">
+                    <img src="BriskSrcFolder/BriskImages/BriskWasp .gif" class="img-fluid h-100" alt="img" width="30" height="40">
                     <div class="project-details">
                         <a href="" class="fs-4 fw-bold text-center">WASP Control</a>
                         <p class="fs-6 text-center">Fast, eco Wasp Control for a sting-free zone</p>
@@ -188,7 +188,7 @@
                 <div class="project-item">
                     <div class="project-left bg-dark"></div>
                     <div class="project-right bg-dark"></div>
-                    <img src="img/project-5.jpg" class="img-fluid h-100" alt="img">
+                    <img src="BriskSrcFolder/BriskImages/BriskAnt.gif" class="img-fluid h-100" alt="img" width="30" height="40">
                     <div class="project-details">
                         <a href="" class="fs-4 fw-bold text-center">Ants Treatment</a>
                         <p class="fs-6 text-center">Fast, eco Ants Treatment for a pest-free space!</p>
@@ -200,7 +200,7 @@
                 <div class="project-item">
                     <div class="project-left bg-dark"></div>
                     <div class="project-right bg-dark"></div>
-                    <img src="img/project-6.jpg" class="img-fluid h-100" alt="img">
+                    <img src="BriskSrcFolder/BriskImages/BriskFly.gif" class="img-fluid h-100" alt="img" width="30" height="40">
                     <div class="project-details">
                         <a href="" class="fs-4 fw-bold text-center">Fly Removal</a>
                         <p class="fs-6 text-center">Swift, eco Fly Removal for a pest-free zone!</p>
@@ -212,7 +212,7 @@
                 <div class="project-item">
                     <div class="project-left bg-dark"></div>
                     <div class="project-right bg-dark"></div>
-                    <img src="img/project-2.jpg" class="img-fluid h-100" alt="img">
+                    <img src="BriskSrcFolder/BriskImages/BriskCockroach.gif" class="img-fluid h-100" alt="img" width="30" height="40">
                     <div class="project-details">
                         <a href="" class="fs-4 fw-bold text-center">Cockroach Control</a>
                         <p class="fs-6 text-center">Fast, eco Cockroach Control for a pest-free space!</p>
@@ -221,23 +221,21 @@
             </div>
 
             <!-- Project Item 8 -->
-            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
-                <div class="project-item">
-                    <div class="project-left bg-dark"></div>
-                    <div class="project-right bg-dark"></div>
-                    <img src="img/project-4.jpg" class="img-fluid h-100" alt="img">
-                    <div class="project-details">
-                        <a href="" class="fs-4 fw-bold text-center">Honey Bee Removal</a>
-                        <p class="fs-6 text-center">Gentle, eco Bee Removal for a sting-free zone!.</p>
-                    </div>
+             <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
+            <div class="project-item">
+                <div class="project-left bg-dark"></div>
+                <div class="project-right bg-dark"></div>
+                <img src="BriskSrcFolder/BriskImages/BriskHoney-Bee.gif" class="img-fluid h-100" alt="img">
+                <div class="project-details">
+                    <a href="" class="fs-4 fw-bold text-center">Honey Bee Removal</a>
+                    <p class="fs-6 text-center">Gentle, eco Bee Removal for a sting-free zone!.</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-        <!-- Project End -->
-
+<!-- Project End -->
+           
              <!-- Blog Start -->
         <div class="container-fluid py-5">
     <div class="container py-5">
