--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </head>
 <body>
         <div align="center">
-        <img src="img/BriskWelcomePage5.gif" alt="Brisk Pest Control" length="120", width="70%">
+        <img src="BriskSrcFolder/BriskImages/BriskWelcomeJPNagar.png" alt="Brisk Pest Control" length="120", width="70%">
       </div>
     </div>
   </div>
