--- a/index.html
+++ b/index.html
@@ -134,47 +134,46 @@
 </div>
 
         <!-- Project Start -->
-       <div class="container-fluid py-5">
-    <div class="container py-5">
-        <div class="text-center mb-5">
-            <h3 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Service</h3>
+<div class="container py-4">
+    <div class="text-center mb-4">
+        <h3 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Service</h3>
+    </div>
+    <div class="row g-4">
+        <!-- Project Item 1 -->
+        <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
+            <div class="project-item">
+                <div class="project-left bg-dark"></div>
+                <div class="project-right bg-dark"></div>
+                <img src="BriskSrcFolder/BriskImages/BriskRodent.gif" class="img-fluid" alt="img">
+                <div class="project-details">
+                    <a href="#" class="fs-5 fw-bold text-center">Rodent Control</a>
+                    <p class="fs-6 text-center">Fast, eco Rodent Control for a pest-free space!</p>
+                </div>
+            </div>
         </div>
-        <div class="row g-5">
-            <!-- Project Item 1 -->
-            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
-                <div class="project-item">
-                    <div class="project-left bg-dark"></div>
-                    <div class="project-right bg-dark"></div>
-                    <img src="BriskSrcFolder/BriskImages/BriskRodent.gif" class="img-fluid h-100" alt="img" width="15" height="15">
-                    <div class="project-details">
-                        <a href="" class="fs-4 fw-bold text-center">Rodent Control</a>
-                        <p class="fs-6 text-center">Fast, eco Rodent Control for a pest-free space!</p>
-                    </div>
+
+        <!-- Project Item 2 -->
+        <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
+            <div class="project-item">
+                <div class="project-left bg-dark"></div>
+                <div class="project-right bg-dark"></div>
+                <img src="BriskSrcFolder/BriskImages/BriskMosquito.gif" class="img-fluid" alt="img">
+                <div class="project-details">
+                    <a href="#" class="fs-5 fw-bold text-center">Mosquito Control</a>
+                    <p class="fs-6 text-center">Fast, eco Mosquito Control for a bite-free zone!</p>
                 </div>
             </div>
+        </div>
 
-            <!-- Project Item 2 -->
-            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
-                <div class="project-item">
-                    <div class="project-left bg-dark"></div>
-                    <div class="project-right bg-dark"></div>
-                    <img src="BriskSrcFolder/BriskImages/BriskMosquito.gif" class="img-fluid h-100" alt="img" width="30" height="40">
-                    <div class="project-details">
-                        <a href="" class="fs-4 fw-bold text-center">Mosquito Control</a>
-                        <p class="fs-6 text-center">Fast, eco Mosquito Control for a bite-free zone!</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Project Item 7 -->
-            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
-                <div class="project-item">
-                    <div class="project-left bg-dark"></div>
-                    <div class="project-right bg-dark"></div>
-                    <img src="BriskSrcFolder/BriskImages/BriskCockroach.gif" class="img-fluid h-100" alt="img" width="30" height="40">
-                    <div class="project-details">
-                        <a href="" class="fs-4 fw-bold text-center">Cockroach Control</a>
-                        <p class="fs-6 text-center">Fast, eco Cockroach Control for a pest-free space!</p>
+        <!-- Project Item 7 -->
+        <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12">
+            <div class="project-item">
+                <div class="project-left bg-dark"></div>
+                <div class="project-right bg-dark"></div>
+                <img src="BriskSrcFolder/BriskImages/BriskCockroach.gif" class="img-fluid" alt="img">
+                <div class="project-details">
+                    <a href="#" class="fs-5 fw-bold text-center">Cockroach Control</a>
+                    <p class="fs-6 text-center">Fast, eco Cockroach Control for a pest-free space!</p>
                 </div>
             </div>
         </div>
@@ -182,14 +181,14 @@
 </div>
 <!-- Project End -->
 
-<div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-    <!-- Add an onclick attribute to the existing h3 tag to redirect to "service.html" -->
+<div class="text-center mb-4 wow fadeInUp" data-wow-delay=".3s">
+    <!-- Adjusted styles for the "More Service" button -->
     <h3 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block"
-        style="border-radius: 20px; background: linear-gradient(to right, #ffd700, #ffcc00); padding: 8px; cursor: pointer; display: inline-block;"
+        style="border-radius: 15px; background: linear-gradient(to right, #ffd700, #ffcc00); padding: 6px; cursor: pointer; display: inline-block;"
         onclick="window.location.href='service.html';">
         More Service ➔
     </h3>
-</div>        
+</div>
 
         <!-- Pricing Start -->
 <div class="container text-center">
