--- a/index.html
+++ b/index.html
@@ -245,42 +245,41 @@
 <div class="owl-carousel testimonial-carousel">
     <div class="testimonial-item">
         <div class="testimonial-content rounded p-3">
-            <p class="fs-5 m-0">Welcome to BRISK PEST SERVICE—your dedicated partner for superior, eco-friendly pest control. Guaranteed satisfaction for a pest-free space.</p>
+            <p class="fs-6 m-0">Welcome to BRISK PEST SERVICE—your dedicated partner for superior, eco-friendly pest control. Guaranteed satisfaction for a pest-free space.</p>
         </div>
-        <div class="d-flex align-items-center  mt-3">
-            <img src="img/pngegg.png" class="img-fluid rounded-circle py-2 me-3" alt="">
+        <div class="d-flex align-items-center mt-3">
+            <img src="img/pngegg.png" class="img-fluid rounded-circle py-2 me-3" alt="" style="width: 60px; height: 60px;">
             <div>
-                <h4 class="mb-0">100% Satisfaction Guarantee</h4>
+                <h4 class="mb-0 fs-6">100% Satisfaction Guarantee</h4>
             </div>
         </div>
     </div>
 
     <div class="testimonial-item">
         <div class="testimonial-content rounded p-3">
-            <p class="fs-5 m-0">Brisk Pest Management: Your top-tier, eco-friendly pest control solution. Our experts guarantee a pest-free environment, with Straight Forward Pricing for peace of mind. Experience excellence where expertise meets dedication.</p>
+            <p class="fs-6 m-0">Brisk Pest Management: Your top-tier, eco-friendly pest control solution. Our experts guarantee a pest-free environment, with Straight Forward Pricing for peace of mind. Experience excellence where expertise meets dedication.</p>
         </div>
-        <div class="d-flex align-items-center  mt-3">
-            <img src="img/pngegg (2).png" class="img-fluid rounded-circle py-2 me-3" alt="">
+        <div class="d-flex align-items-center mt-3">
+            <img src="img/pngegg (2).png" class="img-fluid rounded-circle py-2 me-3" alt="" style="width: 60px; height: 60px;">
             <div>
-                <h4 class="mb-0">Straight Forward Pricing</h4>
+                <h4 class="mb-0 fs-6">Straight Forward Pricing</h4>
             </div>
         </div>
     </div>
 
     <div class="testimonial-item">
         <div class="testimonial-content rounded p-3">
-            <p class="fs-5 m-0">Brisk Pest Management: Your top-tier, eco-friendly pest control solution. Our experts guarantee a pest-free environment, with 24/7 Emergency Services for your peace of mind. Experience excellence with us, where expertise meets dedication.</p>
+            <p class="fs-6 m-0">Brisk Pest Management: Your top-tier, eco-friendly pest control solution. Our experts guarantee a pest-free environment, with 24/7 Emergency Services for your peace of mind. Experience excellence with us, where expertise meets dedication.</p>
         </div>
-        <div class="d-flex align-items-center  mt-3">
-            <img src="img/pngwing.com.png" class="img-fluid rounded-circle py-2 me-3" alt="">
+        <div class="d-flex align-items-center mt-3">
+            <img src="img/pngwing.com.png" class="img-fluid rounded-circle py-2 me-3" alt="" style="width: 60px; height: 60px;">
             <div>
-                <h4 class="mb-0">24/7 Emergency Service</h4>
+                <h4 class="mb-0 fs-6">24/7 Emergency Service</h4>
             </div>
         </div>
     </div>
 </div>
 <!-- Testimonial End -->
-
 
         <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
