--- a/index.html
+++ b/index.html
@@ -239,6 +239,56 @@
     </div>
 </div>
 <!-- Testimonial End -->
+    <!-- Reliability Start -->
+                    <div class="container testimonial py-4">
+                        <div class="container py-4">
+                            <div class="text-center mb-4">
+                                <h1 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Reliability</h1>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="container text-center">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                                <div class="rounded pricing-item">
+                                    <div class="bg-primary py-4 px-4 text-center rounded-top border-bottom border-dark">
+                                        <!-- Removed the image tag -->
+                                        <h2 class="m-0 text-light" style="color: black !important;">Price</h2>
+                                    </div>
+                                    <div class="px-4 py-5 text-center bg-light pricing-label mb-2" style="color: black;">
+                                        <h1 class="mb-0">Straight Forwarding Prices<span class="text-secondary fs-5 fw-normal"></span></h1>
+                                        <p class="mb-0">Our straight forward prices ensure clarity and trust. No hidden fees, just honest value for your investment.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                                <div class="rounded pricing-item">
+                                    <div class="bg-dark py-4 px-4 text-center rounded-top border-bottom border-primary">
+                                        <!-- Removed the image tag -->
+                                        <h2 class="m-0 text-primary">Satisfication</h2>
+                                    </div>
+                                    <div class="px-4 py-5 text-center bg-light pricing-label mb-2" style="color: black;">
+                                        <h1 class="mb-0">100% Satisfication Gaurantee<span class="text-secondary fs-5 fw-normal"></span></h1>
+                                        <p class="mb-0">We stand by our service with confidence. If you're not satisfied, we'll make it right. Your happiness is our priority</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                                <div class="rounded pricing-item">
+                                    <div class="bg-primary py-4 px-4 text-center rounded-top border-bottom border-dark">
+                                        <!-- Removed the image tag -->
+                                        <h2 class="m-0 text-light" style="color: black !important;">Service</h2>
+                                    </div>
+                                    <div class="px-4 py-5 text-center bg-light pricing-label mb-2" style="color: black;">
+                                        <h1 class="mb-0">24/7 Emergency Service<span class="text-secondary fs-5 fw-normal"></span></h1>
+                                        <p class="mb-0">We're here for you around the clock. Count on us anytime, day or night, for prompt and reliable emergency assistance.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+<!-- Reliability End -->
 
 
         <!-- Footer Start -->
